Bug 90982 - Conditional formatting dialog not functioning properly
Summary: Conditional formatting dialog not functioning properly
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.0.0.0.alpha0+ Master
Hardware: Other All
: high major
Assignee: Not Assigned
URL:
Whiteboard: target:5.0.0
Keywords: regression
: 91638 (view as bug list)
Depends on:
Blocks: VclPtr
  Show dependency treegraph
 
Reported: 2015-04-30 22:28 UTC by Yousuf Philips (jay) (retired)
Modified: 2015-06-12 21:03 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
screencast (1.59 MB, video/webm)
2015-05-01 20:58 UTC, Yousuf Philips (jay) (retired)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yousuf Philips (jay) (retired) 2015-04-30 22:28:04 UTC
Steps:
1) Open Calc
2) Open conditional formatting dialog
3) Attempt to change any of the drop downs

Version: 5.0.0.0.alpha1+
Build ID: 59adad74084e9281887e3f78a225794f37b784d7
TinderBox: Linux-rpm_deb-x86@45-TDF, Branch:master, Time: 2015-04-29_12:34:23

this is a regression as it works correctly in

Version: 5.0.0.0.alpha1+
Build ID: ec7f227f90fbdd0bd17c0b885a832e6408106deb
TinderBox: Linux-rpm_deb-x86@45-TDF, Branch:master, Time: 2015-04-28_12:54:35
Comment 1 raal 2015-05-01 07:09:56 UTC
No problem in Version: 5.0.0.0.alpha1+
Build ID: 59adad74084e9281887e3f78a225794f37b784d7
TinderBox: Linux-rpm_deb-x86_64@46-TDF, Branch:master, Time: 2015-04-29_12:40:39
Comment 2 Yousuf Philips (jay) (retired) 2015-05-01 14:10:23 UTC
Confirmed it on Linux Mint 17 XFCE.

Once you open the dialog, try to change the first drop down which has 'cell value is' to 'All Cells'.

Version: 5.0.0.0.alpha1+
Build ID: 010b2d2d9be846fb6b10848204e29e1bc00ef1ea
TinderBox: Linux-rpm_deb-x86_64@46-TDF, Branch:master, Time: 2015-04-29_23:54:29
Comment 3 raal 2015-05-01 15:06:59 UTC
(In reply to Yousuf (Jay) Philips from comment #2)
> Confirmed it on Linux Mint 17 XFCE.
> 
> Once you open the dialog, try to change the first drop down which has 'cell
> value is' to 'All Cells'.
> 
I can do it without problems, ubuntu 14.10
Comment 4 Buovjaga 2015-05-01 19:14:33 UTC
No problems.

Ubuntu 15.04 64-bit 
Version: 5.0.0.0.alpha1+
Build ID: 0cd88d27ecd87c8c5791418bcac6ab1684ece74a
TinderBox: Linux-rpm_deb-x86_64@46-TDF-dbg, Branch:master, Time: 2015-04-30_00:38:48
Locale: en_US.UTF-8
Comment 5 Yousuf Philips (jay) (retired) 2015-05-01 20:58:01 UTC
Created attachment 115249 [details]
screencast
Comment 6 raal 2015-05-02 05:13:17 UTC
Of course, confirming.

Version: 5.0.0.0.alpha1+
Build ID: 59adad74084e9281887e3f78a225794f37b784d7
TinderBox: Linux-rpm_deb-x86_64@46-TDF, Branch:master, Time: 2015-04-29_12:40:39
Comment 7 Markus Mohrhard 2015-05-03 05:21:25 UTC
Looks like it might be related to the vcl ptr rework.

The dialogs do some ugly casting of pointers and rely on the hierarchy not being changed as they will otherwise set stuff to the wrong widget.

@Michael, Noel: Did you change anything in the vcl hierarchy?
Comment 8 Markus Mohrhard 2015-05-03 05:22:41 UTC
Actually even closing the dialog shows another bug most likely related to the vcl ptr rework as it keeps the blue rectangle for the range selection around.
Comment 9 Commit Notification 2015-05-03 20:29:59 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f66572b2ff5f27ab938edbe3a2329395aae43c2d

tdf#90982 - repair parts of the conditional formatting dialog.

It will be available in 5.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2015-05-03 20:42:19 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f7bed502ff0dc43f5a24f8e35c5573bdd76eed65

tdf#90982 - repair more of the conditional formatting dialog.

It will be available in 5.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Michael Meeks 2015-05-03 20:43:23 UTC
Pushed several fixes - and it seems to work nicely for me - though there is a lot of visible widget thrash [ in the sidebar too ] (for me) opening that dialog which is fun ;-)

The leaked 'blue border' thing is OTOH not fixed - what's the name of the method that creates / removes that so I can have a poke ? =)

Thanks !
Comment 12 Markus Mohrhard 2015-05-04 16:26:09 UTC
(In reply to Michael Meeks from comment #11)
> 
> The leaked 'blue border' thing is OTOH not fixed - what's the name of the
> method that creates / removes that so I can have a poke ? =)
> 


I think it comes from the formula::RefEdit. There is also a corresponding button that works together with the Edit.
Comment 13 Philippe Jung 2015-05-16 17:57:57 UTC
Playing with the dialog, I got a crash:

warn:legacy.osl:23709:1:vcl/source/window/window.cxx:271: Window ( 16ScCondFormatList ()) with live children destroyed:  20ScConditionFrmtEntry ()
Window ( 16ScCondFormatList ()) with live children destroyed:  20ScConditionFrmtEntry ()
Comment 14 Philippe Jung 2015-05-16 18:02:54 UTC
Show condition dialog
Select all cells
Close dialog with 'X' button
=> crash
Comment 15 Commit Notification 2015-05-17 04:50:06 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=fed568a27f1810beb93fc127ee7392b1a6131628

fix more conditional format crashes, tdf#90982

It will be available in 5.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 16 Philippe Jung 2015-05-19 13:45:34 UTC
Resolved in git master build
Comment 17 Buovjaga 2015-05-20 06:25:31 UTC
Yep, no problems.

Win 7 Pro 64-bit Version: 5.0.0.0.alpha1+
Build ID: 2a886adb500fe481e1ea61573551b19e99c55b8b
TinderBox: Win-x86@39, Branch:master, Time: 2015-05-20_00:31:51
Locale: fi-FI (fi_FI)
Comment 18 Michael Meeks 2015-06-12 21:03:48 UTC
*** Bug 91638 has been marked as a duplicate of this bug. ***