tdf#90982 - repair parts of the conditional formatting dialog.

Change-Id: I5203e8205969004c6c2dd8f1dc438c9e7583a991